@@ -1,3 +1,9 @@
+2004-04-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/14755
+	* fold-const.c (fold) <EQ_EXPR>: Properly compute newconst in
+	"bitfld++ == const" to "++bitfld == const + incr" transformations.
+
 2004-03-30  Aldy Hernandez  <aldyh@redhat.com>
  
         PR 14219
